# Efficient_RANSAC_implementaiton

./: CMakeLists.txt  Database.cpp  Database.h  Model_PreProsessing.cpp  Model_PreProsessing.h  SeializeDeserialize.h  SerializeDeserialize.cpp  boostSerial.cpp  main.cpp  test.cpp  tryAndreiSeri.cpp
saved_code/AndreiUTL/: 0 PCLpoint_Serialization.txt  1_String.txt  2_Map_of_String_int.txt  3 PCLpoint_PAIR_Serialization.txt  4 Vector_of_Pairs_of_int.txt  5 InnerMap_in_one_function.txt  7 OUTERMAP.txt  InnerMap(working_with_in).txt
